.deployment/dev/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: rails-aws-{name}
spec:
  replicas: 2
  selector:
      matchLabels:
          app: rails-aws-{name}
  template:
    metadata:
      name: rails-aws-{name}
      labels:
        app: rails-aws-{name}
    spec:
      containers:
      - name: rails-aws-app
        image: 592309593815.dkr.ecr.us-east-1.amazonaws.com/rails-aws:{version}
        resources:
          limits:
            memory: "500Mi"
            cpu: "500m"
          requests:
            memory: "64Mi"
            cpu: "100m"
        imagePullPolicy: Always
        ports:
        - name: rails-aws
          containerPort: 3000
      nodeSelector:
        kubernetes.io/os: linux
